Clean up redundant lines in CSS, fix gaps and width of els

--- a/sign-up-form/styles.css
+++ b/sign-up-form/styles.css
@@ -75,6 +75,10 @@ body {
     color: white;
 }
 
+.form-title {
+    color: grey;
+}
+
 .sign-up-content {
     flex: 1;
     background-color: #d9d9d9; 
@@ -101,6 +105,8 @@ body {
 .form-row {
     display: grid;
     grid-template-columns: 1fr 1fr; /* Splits the row into 2 equal parts */
+    width: fit-content;
+    max-width: 80%;
     gap: 20px;
     margin-bottom: 15px;
 }
@@ -112,7 +118,7 @@ body {
 
 label {
     text-transform: uppercase;
-    font-size: 0.75rem; 
+    font-size: 0.5rem; 
     color: #868686;   
     font-weight: 800;  
     letter-spacing: 0.05rem;
@@ -134,6 +140,13 @@ input:user-invalid {
     border: 1px solid red; /* The "error" state */
 }
 
+.form-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    max-width: 250px;
+}
+
 button {
     background-color: #596D48;
     color: white;
@@ -148,6 +161,7 @@ button {
 
 .login-link {
     padding: 0 2rem;
+    font-size: 0.7rem;
 }
 
 .login-link a {
@@ -161,9 +175,4 @@ button {
     border-bottom: 1px solid #596D48; /* Turns solid on hover */
 }
 
-.form-footer {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    max-width: 600px;
-}
+
